--- a/index.html
+++ b/index.html
@@ -1,29 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ortodent</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <header class="header">
         <div class="logo">
-            <img src="imagenes/logo.jpg" alt="">
-            <nav class="lista"> 
-             <ul>
-                <li><b>Nosotros</b></li>
-                <li><b>Sucursales</b></li>
-                <li><b>Blog</b></li>
-                <li><b>Contacto</b></li>
-             </ul>
+            <img src="imagenes/logo.png" alt="">
+            <nav class="lista">
+                <ul>
+                    <li><b>Nosotros</b></li>
+                    <li><b>Sucursales</b></li>
+                    <li><b>Blog</b></li>
+                    <li><b>Contacto</b></li>
+                </ul>
             </nav>
         </div>
 
     </header>
-    
+    <jumbotron>
+        <div class="imagenjumbo">
+            <div class="contenidojumbo">
+                <h5>Registrate para obtener tu cita de valoracion gratis</h5>
+                <h1>Bienvenido a Ortodent</h1>
+                <p> Somos un grupo de Odontologico formado por los mejores especialistas, trabajamos con los mas altos
+                    <b>estandares</b> de calidad, para crear <b>sonrisas</b> mas sanas y bonitas
+                </p>
+                <form action="submit">
+                    <label for="mail"></label>
+                    <input name="mail" type="mail" placeholder="example@mail.com" />
+                    <button type="submit">Enviar</button>
+                </form>
+
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
+
+    </jumbotron>
+
 </body>
+
 </html>
