termine el catalogo

--- a/index.html
+++ b/index.html
@@ -41,23 +41,46 @@
 
             </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         </div>
 
     </jumbotron>
+
+
+    <section class="seccatalogo">
+
+        <h1 class="titulocatalogo"> Servicios</h1>
+        <h1 class="subtcatalogo">Nuestras Especialidades</h1>
+
+        <div class="contenidocatalogo">
+            <div class="imgcatalogo">
+                <img src="imagenes/demo1.jpg" alt="">
+                <h4>Odontologia General</h4>
+                <p>Diagnostica y dirige a la especialidad correspondiente.</p>
+                <a href="">Ver detalle...</a>
+            </div>
+
+
+            <div class="imgcatalogo">
+                <img src="imagenes/demo2.jpg" alt="">
+                <h4>Ortodoncia</h4>
+                <p>Corrige anomalías de función, posición y forma de la estructura maxilofacial.</p>
+                <a href="">Ver detalle...</a>
+
+            </div>
+
+
+            <div class="imgcatalogo">
+                <img src="imagenes/demo3.jpg" alt="">
+                <h4>Odontologia Preventiva</h4>
+                <p>Revisa y asesora de manera periódica.</p>
+                <a href="">Ver detalle...</a>
+            </div>
+        </div>
+
+    </section>
+
+
+
 
 </body>
 
