termine el adicional

--- a/index.html
+++ b/index.html
@@ -78,10 +78,21 @@
         </div>
 
     </section>
+    <section class="adicionales">
 
+        <div>
+            <img class="adic2" src="imagenes/adic2.jpg" alt="">
+            <img class="adic1" src="imagenes/adic1.jpg" alt="">
 
-
-
+        </div>
+        <div class="textocat">
+            <h1>¿Tienes alguna duda?</h1>
+            <h3>Contamos con equipo de la mas alta tecnologia y nos destacamos por nuestra experiencia y dedicacion. Nos
+                comprometemos a brindar servicios de la mas alta calidad garantizando la completa satisfaccion de
+                nuestros pacientes.</h3>
+            <button>Agenda tu cita<img src="imagenes/icono.png"></button>
+        </div>
+    </section>
 </body>
 
 </html>
