se realizo el footer

--- a/index.html
+++ b/index.html
@@ -93,6 +93,72 @@
             <button>Agenda tu cita<img src="imagenes/icono.png"></button>
         </div>
     </section>
+    <footer class="footergeneral">
+        <section class="footerparte1">
+            <div>
+                <img src="imagenes/foot1.png" alt="">
+                <h4>(31) 1285 7607</h4>
+            </div>
+            <div>
+                <img src="imagenes/foot2.png" alt="">
+                <h4>ortodent@gmail.com.mx</h4>
+            </div>
+            <div>
+                <img src="imagenes/foot3.png" alt="">
+                <h4>Avenida Siempreviva 742</h4>
+            </div>
+        </section>
+        <hr>
+        <section class="footerparte2">
+            <div>
+                <ul>
+                    <li><b><a href="">Acerca de</a></b></li>
+                    <li><a href="">Nuestra Historia</a></li>
+                    <li><a href="">Certificaciones</a></li>
+                    <li><a href="">Nuestro Equipo</a></li>
+                </ul>
+
+            </div>
+            <div>
+                <ul>
+                    <li><b><a href="">Compañia</a></b></li>
+                    <li><a href="">Nuestros servicios</a></li>
+                    <li><a href="">Promociones</a></li>
+                </ul>
+
+            </div>
+            <div>
+                <ul>
+                    <li><b><a href="">Recursos</a></b></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Newsletter</a></li>
+                    <li><a href="">Aviso de Privacidad</a></li>
+                </ul>
+
+            </div>
+            <div class="footersuscribete">
+                <label for="mail"><b>Suscribete</b></label>
+                <input name="mail" type="mail" placeholder="example@mail.com" />
+                <h5>Nuestro marketing digital llegara a tu e-mail.</h5>
+            </div>
+
+
+        </section>
+
+        <section class="footerparte3">
+            <img src="imagenes/footerface.png" alt="">
+            <img src="imagenes/footerinst.png" alt="">
+            <img src="imagenes/footertinder.png" alt="">
+            <img src="imagenes/footertwitter.png" alt="">
+            <img src="imagenes/footerwhatsapp.png" alt="">
+
+        </section>
+
+    </footer>
+
+
+
+
 </body>
 
 </html>
