se realizo el responsive design

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><b>Contacto</b></li>
                 </ul>
             </nav>
+            <a href=""><img src="imagenes/menu-movil.png" alt=""></a>
         </div>
 
     </header>
